--- a/force-app/main/default/classes/SendEmailTemplate.cls
+++ b/force-app/main/default/classes/SendEmailTemplate.cls
@@ -49,13 +49,41 @@ public without sharing class SendEmailTemplate {
         }
         Messaging.sendEmail(msgListToBeSend);
     }
-    
+    @InvocableMethod(Label='Send Emails')
+    public static void sendEmailNotificationWithDelegates(List<emailNotification> variables){
+        //prepare emails list:
+        System.debug(variables);
+        List<Messaging.SingleEmailMessage> emailMessages = new List<Messaging.SingleEmailMessage>();
+        emailMessages.add(createEmail(getEmailTemplateId(variables[0].templateName), variables[0].contactId, variables[0].whatId, variables[0].studyId, true, variables[0].userMode));
+        System.debug(emailMessages);
+        //send emails:
+        sendEmailMessages(emailMessages);
+    }
+    public class emailNotification {
+        @InvocableVariable
+        public String templateName;
+        @InvocableVariable
+        public Id contactId;
+        @InvocableVariable
+        public Id whatId;
+        @InvocableVariable
+        public Id studyId;
+        @InvocableVariable
+        public String userMode;
+    }
+
+
     
     public static Messaging.SingleEmailMessage createEmail(String templateDeveloperName, Id contactId, Id whatId){
         return createEmail(getEmailTemplateId(templateDeveloperName), contactId, whatId);
     }
     
     public static Messaging.SingleEmailMessage createEmail(Id emailTemplateId, Id contactId, Id whatId){
+
+        return createEmail(emailTemplateId, contactId, whatId, null, false,'');
+    }
+
+    public static Messaging.SingleEmailMessage createEmail(Id emailTemplateId, Id contactId, Id whatId, Id studyId, Boolean ccDelegates, String userMode){
         Messaging.SingleEmailMessage newEmail = new Messaging.SingleEmailMessage();
         newEmail.setTemplateId(emailTemplateId);
         newEmail.setTargetObjectId(contactId);
@@ -63,6 +91,31 @@ public without sharing class SendEmailTemplate {
         newEmail.setOrgWideEmailAddressId(ORGWIDE_EMAIL_ADDRESS_Id);
         //newEmail.setToAddresses(new List<String>{toAddress});
         newEmail.setWhatId(whatId);
+        if(ccDelegates && userMode == CommunityService.USER_MODE_PI){
+            List<String> delegateAddresses = new List<String>();
+            for(Site_Staff__c delegate : [
+                    SELECT Id, Site_Contact__r.Email
+                    FROM Site_Staff__c
+                    WHERE
+                    Delegate_Level__c =: DelegateService.DELEGATE_LEVEL_1
+                    AND Study_Site__c = :studyId]){
+                delegateAddresses.add(delegate.Site_Contact__r.Email);
+            }
+            newEmail.setCcAddresses(delegateAddresses);
+        }
+        else if(ccDelegates && userMode == CommunityService.USER_MODE_HCP){
+            List<String> delegateAddresses = new List<String>();
+            for(Referring_HCP_Staff__c delegate : [
+                    SELECT Id, Contact__r.Email
+                    FROM Referring_HCP_Staff__c
+                    WHERE
+                    Delegate_Level__c =: DelegateService.DELEGATE_LEVEL_1
+                    AND HCP_Enrollment__r.Study_Site__c = :studyId]){
+                delegateAddresses.add(delegate.Contact__r.Email);
+            }
+            newEmail.setCcAddresses(delegateAddresses);
+        }
+
         return newEmail;
     }
     
@@ -90,6 +143,13 @@ public without sharing class SendEmailTemplate {
                 LIMIT 1
         ];
         if(orgwideEmailAddresses.isEmpty()){
+            Organization org = [SELECT Id, IsSandbox FROM Organization LIMIT 1];
+            if(org.IsSandbox){
+                orgwideEmailAddresses = [SELECT Id FROM OrgWideEmailAddress LIMIT 1];
+                if(!orgwideEmailAddresses.isEmpty()){
+                    return orgwideEmailAddresses[0];
+                }
+            }
             throw new SendEmailTemplateException('Org Wide Email Address: "' + CommunityService.COMMUNITY_ORG_WIDE_ADDRESS_NAME + '" not found');
         }
         return orgwideEmailAddresses[0];
