--- a/force-app/main/default/classes/DelegateService.cls
+++ b/force-app/main/default/classes/DelegateService.cls
@@ -97,6 +97,10 @@ public class DelegateService {
     }
     
     public static void init(){
+        Set<Id> siteIds = new Set<Id>();
+        for(Site_Staff__c del : [SELECT Id, Study_Site__c FROM Site_Staff__c WHERE Site_Contact__c = : CommunityService.getUserContact().Id]){
+            siteIds.add(del.Study_Site__c);
+        }
         List<Site_Staff__c> piStaffs = [
                 SELECT Id, Study_Site__c,
                         Study_Site__r.Principal_Investigator__c,
@@ -106,6 +110,7 @@ public class DelegateService {
                 FROM Site_Staff__c
                 WHERE Site_Contact__c =: CommunityService.getUserContact().Id
                 OR Study_Site__r.Principal_Investigator__c =: CommunityService.getUserContact().Id
+                OR Study_Site__c IN :siteIds
         ];
         piStudySitesAccessLevelMap = new Map<Id, String>();
         piStudiesAccessLevel = new Map<Id, String>();
@@ -117,7 +122,8 @@ public class DelegateService {
                 piStudiesAccessLevel.put(siteStaff.Study_Site__r.Clinical_Trial_Profile__c, siteStaff.Delegate_Level__c);
                 studyPIContactsMap.put(siteStaff.Study_Site__r.Clinical_Trial_Profile__c, siteStaff.Study_Site__r.Principal_Investigator__c);
             }
-            if(siteStaff.Study_Site__r.Principal_Investigator__c == CommunityService.getUserContact().Id){
+            if(siteStaff.Study_Site__r.Principal_Investigator__c == CommunityService.getUserContact().Id
+                    || siteIds.contains(siteStaff.Study_Site__c)){
                 if(!piTeamStaffTrialMap.containsKey(siteStaff.Site_Contact__c)){
                     piTeamStaffTrialMap.put(siteStaff.Site_Contact__c, new Map<Id,Site_Staff__c>());
                 }
@@ -126,6 +132,11 @@ public class DelegateService {
 
         }
     
+        Set<Id> hcpeIds = new Set<Id>();
+        for(Referring_HCP_Staff__c del : [SELECT Id, HCP_Enrollment__c FROM Referring_HCP_Staff__c WHERE Contact__c = : CommunityService.getUserContact().Id]){
+            hcpeIds.add(del.HCP_Enrollment__c);
+        }
+
         List<Referring_HCP_Staff__c> hcpStaffs = [
                 SELECT Id, Delegate_Level__c,
                         HCP_Enrollment__r.HCP_Contact__c,
@@ -135,6 +146,7 @@ public class DelegateService {
                 FROM Referring_HCP_Staff__c
                 WHERE Contact__c =: CommunityService.getUserContact().Id
                 OR HCP_Enrollment__r.HCP_Contact__c =: CommunityService.getUserContact().Id
+                OR HCP_Enrollment__c IN : hcpeIds
         ];
         hcpEnrollmentsAccessLevelMap = new Map<Id, String>();
         hcpStudiesAccessLevel = new Map<Id, String>();
@@ -146,7 +158,8 @@ public class DelegateService {
                 hcpStudiesAccessLevel.put(hcpStaff.HCP_Enrollment__r.Study_Site__r.Clinical_Trial_Profile__c, hcpStaff.Delegate_Level__c);
                 studyHCPContactsMap.put(hcpStaff.HCP_Enrollment__r.Study_Site__r.Clinical_Trial_Profile__c,  hcpStaff.HCP_Enrollment__r.HCP_Contact__c);
             }
-            if(hcpStaff.HCP_Enrollment__r.HCP_Contact__c == CommunityService.getUserContact().Id){
+            if(hcpStaff.HCP_Enrollment__r.HCP_Contact__c == CommunityService.getUserContact().Id
+                    || hcpeIds.contains(hcpStaff.HCP_Enrollment__c)){
                 if(!hcpTeamStaffTrialMap.containsKey(hcpStaff.Contact__c)){
                     hcpTeamStaffTrialMap.put(hcpStaff.Contact__c, new Map<Id,Referring_HCP_Staff__c>());
                 }
