--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -191,6 +191,7 @@ public without sharing class CommunityService {
     private static Contact getContactById(Id contactId) {
         return [
                 SELECT Id,
+                        Name,
                         primaryContact__c,
                         userCommunityMode__c,
                         userCommunytyType__c,
