--- a/force-app/main/default/classes/HomePageParticipantRemote.cls
+++ b/force-app/main/default/classes/HomePageParticipantRemote.cls
@@ -6,6 +6,7 @@ public class HomePageParticipantRemote {
     
     public class InitData{
         public Participant_Enrollment__c pe;
+        public String name;
     }
     
     @AuraEnabled
@@ -16,6 +17,12 @@ public class HomePageParticipantRemote {
             if(peList.size() > 0){
                 initData.pe = peList[0];
             }
+            if(ParticipantService.getParticipantState().isDelegate) {
+                initData.name = (String) CommunityService.getUserContact().get('Name');
+            } else {
+                initData.name = peList[0].Participant__r.Full_Name__c;
+            }
+
             return JSON.serialize(initData);
         }catch (Exception e){
             throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
